--- a/bin/README
+++ b/bin/README
@@ -1,1 +1,1 @@
-This is where you put any scripts you want to add to this app.
+This is the folder where you put any scripts you want to add to this app.
